istio/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts: 
    - "*"
    tls:
      httpsRedirect: true # 301 redirectを最初にRequestに対しReturnし、その後httpsへRedirect
  - port: # <---- HTTPSの設定
      number: 443
      name: https 
      protocol: HTTPS 
    hosts:
    - "*" # <----- Gatewayが HTTPS port 443を受け入れるホスト名
    tls:
      mode: SIMPLE
      credentialName: gateway-cert-aws-elb-dns # 証明書を保存したK8s secret
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
